# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
.circleci/: config.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
