[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4.0.1"
tokio = {version = "1.18.2",features = ["macros", "rt-multi-thread"]}
serde = {version="1.0.137", features = ["derive"]}
config = "0.11"
chrono = "0.4.21"
[dependencies.sqlx]
version = "0.5.7"
default-features=false
features=[
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
[dependencies.uuid]
version = "0.8.1"
features = [
    "v4"                # Lets you generate random UUIDs
]

[dev-dependencies]
reqwest = "0.11.10"
